<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_baseline_add"
        android:title="Add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="home"
        app:showAsAction="ifRoom" />
</menu>