...
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Welcome to your app to plan city trip "
        android:textColor="@color/textColor"
        android:textColorHighlight="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonTrips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
...
        android:layout_width="117dp"
        android:layout_height="37dp"
        android:layout_marginTop="324dp"
        android:background="#FFFFFF"
        android:backgroundTint="@color/panel"
        android:fontFamily="sans-serif-medium"
        android:text="my trips"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
...
